slice1~7まで実装
